<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mevius_massage</name>
  <version>1.0.0</version>
  <description>
    <p>MEVIUS PACKAGE</p>
  </description>
  <author>Kento Kawaharazuka</author>
  <maintainer email="kawaharazuka@jsk.imi.i.u-tokyo.ac.jp" />
  <license>BSD</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

<!--
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
-->

  <export>
    <build_type>ament_cmake</build_type>
 
  </export>
</package>
